[package]
name = "WBS Monitoring"
version = "1.7.0"
authors = [
	"James Pharaoh <james@wellbehavedsoftware.com>",
	"Jose Luis <joseluis@wellbehavedsoftware.com>"
]
build = "build.rs"

# ---------- core library

[lib]
name = "wbsmonitoring"
path = "src/lib.rs"

# ---------- wrappers

[[bin]]
name = "check-apt"
path = "src/wrappers/check_apt.rs"

[[bin]]
name = "check-authsmtp"
path = "src/wrappers/check_authsmtp.rs"

[[bin]]
name = "check-btrfs"
path = "src/wrappers/check_btrfs.rs"

[[bin]]
name = "check-disk-space"
path = "src/wrappers/check_disk_space.rs"

[[bin]]
name = "check-http"
path = "src/wrappers/check_http.rs"

[[bin]]
name = "check-lxc-container"
path = "src/wrappers/check_lxc_container.rs"

[[bin]]
name = "check-snapshots"
path = "src/wrappers/check_snapshots.rs"

# ---------- legacy

[[bin]]
name = "check-cow"
path = "src/legacy/check_cow.rs"

[[bin]]
name = "check-cpu"
path = "src/legacy/check_cpu.rs"

[[bin]]
name = "check-disk-quota"
path = "src/legacy/check_disk_quota.rs"

[[bin]]
name = "check-dovecot"
path = "src/legacy/check_dovecot.rs"

[[bin]]
name = "check-hd-data"
path = "src/legacy/check_hd_data.rs"

[[bin]]
name = "check-lvm"
path = "src/legacy/check_lvm.rs"

[[bin]]
name = "check-lxc-cpu-overview"
path = "src/legacy/check_lxc_cpu_overview.rs"

[[bin]]
name = "check-lxc-memory"
path = "src/legacy/check_lxc_memory.rs"

[[bin]]
name = "check-md-raid"
path = "src/legacy/check_md_raid.rs"

[[bin]]
name = "check-memory"
path = "src/legacy/check_memory.rs"

[[bin]]
name = "check-postfix"
path = "src/legacy/check_postfix.rs"

[[bin]]
name = "check-subvolumes"
path = "src/legacy/check_subvolumes.rs"

[[bin]]
name = "check-over-quota"
path = "src/legacy/check_over_quota.rs"

[[bin]]
name = "check-mail-ports"
path = "src/legacy/check_mail_ports.rs"

[[bin]]
name = "check-github"
path = "src/legacy/check_github.rs"

[[bin]]
name = "check-etcd"
path = "src/legacy/check_etcd.rs"

[[bin]]
name = "check-git"
path = "src/legacy/check_git.rs"

# ---------- dependencies

[dependencies.btrfs]
version = "*"

[dependencies.chrono]
version = "*"

[dependencies.curl]
version = "*"

[dependencies.getopts]
version = "*"

[dependencies.git2]
version = "*"

[dependencies.glob]
version = "*"

[dependencies.libc]
version = "*"

[dependencies.regex]
version = "*"

[dependencies.RustyXML]
version = "*"

[dependencies.serde_json]
version = "*"

[dependencies.time]
version = "*"

[dependencies.uuid]
version = "*"
