[package]

	name = "wbs-monitoring"
	description = "Collection of Icinga/Nagios plugins"
	version = "1.8.0-beta4"

	license = "BSD-3-Clause"

	authors = [
		"James Pharaoh <james@pharaoh.uk>",
		"José Luis <joseluis@wellbehavedsoftware.com>"
	]

	build = "build.rs"

# ---------- core library

[lib]

	name = "wbsmonitoring"
	path = "src/lib.rs"

# ---------- wrappers

[[bin]]
name = "check-apt"
path = "src/wrappers/check_apt.rs"

[[bin]]
name = "check-authsmtp"
path = "src/wrappers/check_authsmtp.rs"

[[bin]]
name = "check-btrfs"
path = "src/wrappers/check_btrfs.rs"

[[bin]]
name = "check-disk-space"
path = "src/wrappers/check_disk_space.rs"

[[bin]]
name = "check-generic"
path = "src/wrappers/check_generic.rs"

[[bin]]
name = "check-http"
path = "src/wrappers/check_http.rs"

[[bin]]
name = "check-lxc-container"
path = "src/wrappers/check_lxc_container.rs"

[[bin]]
name = "check-snapshots"
path = "src/wrappers/check_snapshots.rs"

[[bin]]
name = "check-systemd"
path = "src/wrappers/check_systemd.rs"

# ---------- legacy

[[bin]]
name = "check-cow"
path = "src/legacy/check_cow.rs"

[[bin]]
name = "check-cpu"
path = "src/legacy/check_cpu.rs"

[[bin]]
name = "check-disk-quota"
path = "src/legacy/check_disk_quota.rs"

[[bin]]
name = "check-dovecot"
path = "src/legacy/check_dovecot.rs"

[[bin]]
name = "check-hd-data"
path = "src/legacy/check_hd_data.rs"

[[bin]]
name = "check-lvm"
path = "src/legacy/check_lvm.rs"

[[bin]]
name = "check-lxc-cpu-overview"
path = "src/legacy/check_lxc_cpu_overview.rs"

[[bin]]
name = "check-lxc-memory"
path = "src/legacy/check_lxc_memory.rs"

[[bin]]
name = "check-md-raid"
path = "src/legacy/check_md_raid.rs"

[[bin]]
name = "check-memory"
path = "src/legacy/check_memory.rs"

[[bin]]
name = "check-postfix"
path = "src/legacy/check_postfix.rs"

[[bin]]
name = "check-subvolumes"
path = "src/legacy/check_subvolumes.rs"

[[bin]]
name = "check-over-quota"
path = "src/legacy/check_over_quota.rs"

[[bin]]
name = "check-mail-ports"
path = "src/legacy/check_mail_ports.rs"

[[bin]]
name = "check-github"
path = "src/legacy/check_github.rs"

[[bin]]
name = "check-etcd"
path = "src/legacy/check_etcd.rs"

[[bin]]
name = "check-git"
path = "src/legacy/check_git.rs"

# ---------- dependencies

[dependencies]

	btrfs = "*"
	chrono = "*"
	curl = "*"
	der-parser = "*"
	encoding = "*"
	futures = "*"
	getopts = "*"
	git2 = "*"
	glob = "*"
	hyper = { version = "*", features = [ "raw_status" ] }
	hyper-tls = "*"
	hyper-rustls = "*"
	itertools = "*"
	libc = "*"
	nom = "*"
	regex = "*"
	resolv = "*"
	rustls = "*"
	RustyXML = "*"
	serde = "*"
	serde_derive = "*"
	serde_json = "*"
	systemd-jp = "*"
	time = "*"
	tokio-core = "*"
	tokio-io = "*"
	tokio-rustls = "*"
	tokio-service = "*"
	uuid = "*"
	webpki-roots = "*"

# ---------- build profiles

[profile.dev]

	opt-level = 0
	debug = true
	lto = false

[profile.release]

	opt-level = 3
	debug = false
	lto = true

# ex: noet ts=4 filetype=toml
